<?xml version="1.0" encoding="utf-8"?>
<resources><string name="sms_sender">SMS Sender</string><string name="app_name">SMS Sender</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    
    <string name="ph_num">Phone</string>
    <string name="txt_msg">Text</string>
    <string name="b_send">Send</string>
    <string name="b_clear">Clear</string>

</resources>